# bintodec-tui

./: Cargo.toml  README.md
src/: main.rs
